--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Install
         run: |
           yarn config set msvs_version 2022 -g
-          yarn install --openssl_fips='' --frozen-lockfile 
+          yarn install --frozen-lockfile 
+          npm install --openssl_fips=''
       - name: Build
         run: yarn build
