--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node-version: [16.x, 18.x]
+        node-version: [16.x]
         os: [windows-latest, macOS-latest]
       fail-fast: false
     steps:
@@ -18,8 +18,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Install
         run: |
-          yarn config set msvs_version 2022 -g
           yarn install --frozen-lockfile 
-          npm install --openssl_fips=''
       - name: Build
         run: yarn build
